<?xml version="1.0"?>
<package format="3">
  <name>laser_line_extraction_ros2</name>
  <version>1.0.0</version>
  <description>
      A ROS2 package to extract line segments from LaserScan messages.
  </description>
  <maintainer email="adharsh.venkat98@gmail.com">Adharsh Venkatachalam</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>laser_line_extraction_msgs</build_depend>
  <depend>builtin_interfaces</depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>laser_line_extraction_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
